# k8s-cloud-tagger

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Earthfile  LICENSE  Nix.md  README.md  flake.nix  kustomization.yaml  operator.yaml
.github/workflows/: ci.yml  nix.yml  push-dev-image.yml  release.yml
dagger/: Cargo.toml  README.md  dagger.json
dagger/src/: main.rs
docs/: aws.md  azure.md  google_cloud.md
helm/k8s-cloud-tagger/: Chart.yaml  values.yaml
helm/k8s-cloud-tagger/templates/: _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  configmap.yaml  deployment.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
helm/k8s-cloud-tagger/templates/ack/: iam-policy.yaml  iam-role.yaml
helm/k8s-cloud-tagger/templates/configconnector/: iam-policy.yaml  iam-role.yaml  iam-service-account.yaml  iam-workload-identity.yaml
helm/k8s-cloud-tagger/templates/serviceoperator/: federated-identity-credential.yaml  managed-identity.yaml  resource-group.yaml  role-assignment.yaml  role-definition.yaml
src/: config.rs  error.rs  health.rs  main.rs  metrics.rs  reconciler.rs  tls.rs  traits.rs
src/cloud/: aws.rs  azure.rs  gcp.rs  mock.rs  mod.rs
src/resources/: mod.rs  pvc.rs  pvc_test.rs
tests/: e2e.sh
tests/fixtures/: pvc-consumer.yaml  pvc.yaml
xtask/src/: main.rs
