[package]
name = "k8s-cloud-tagger"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
kube = { version = "3.0.0", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.27.0", features = ["v1_35"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
anyhow = "1.0.100"
futures = "0.3.31"
axum = "0.8.8"
http = "1.4.0"
prometheus = "0.14.0"
async-trait = "0.1.89"

[dev-dependencies]
serde_json = "1.0.149"
tower = "0.5.3"
bytes = "1.11.0"
tower-test = "0.4.0"
